# SDL-Snake

./: Apple.h  CMakeLists.txt  Constants.h  Consumable.cpp  Consumable.h  LICENSE  Renderer.h  Snake.cpp  Snake.h  main.cpp
